Настройка подключения bd

--- a/UserService.API/appsettings.json
+++ b/UserService.API/appsettings.json
@@ -5,6 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
-    "AllowedHosts": "*"
-  }
+  "Jwt": {
+    "Key": "VeryLongJwtSecurityKey",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=user-db-service;Port=5432;Database=db;Password=admin;User ID=admin"
+  },
+  "AllowedHosts": "*"
+}
